package com.sgl.model;

public enum Perfil {
	
	ADMINISTRADOR,
	GESTOR,
	TECNICO,
	PESQUISADOR,
	ESTAGIARIO

}
