package com.sgl.model.enums;

public enum NivelRisco {
	
	NENHUM,
	BAIXO,
	MEDIO,
	ALTO

}
