package com.sgl.model.enums;

public enum OrigemMovimentacao {

    PEDIDO,
    COMPRA,
    AJUSTE,
    DEVOLUCAO,
    INVENTARIO,
    DESCARTE
}
