package com.sgl.model.enums;

public enum TipoRisco {

    NENHUM,
    INFLAMAVEL,
    RADIOATIVO,
    TOXICO,
    CORROSIVO,
    BIOLOGICO,
    IRRITANTE,
    PERIGO_SAUDE,
    OXIDANTE,
    EXPLOSIVO,
    GAS_PRESSURIZADO,
    PERIGO_AMBIENTAL
}
