package com.sgl.model.enums;

public enum UnidadeMedida {
	
	ML, L, MG, G, KG, UNIDADE, CAIXA, FRASCO, AMPOLA, PAR, METRO, OUTRO

}
